--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require-dev": {
         "phpunit/phpunit": "~4.5,>=4.5.1"
     },
-    "name": "j7mbo/twitter-api-php",
+    "name": "oleyur/twitter-api-php",
     "description": "Simple PHP Wrapper for Twitter API v1.1 calls",
     "type": "library",
     "keywords": [
@@ -13,7 +13,7 @@
         "PHP",
         "API"
     ],
-    "homepage": "https://github.com/j7mbo/twitter-api-php",
+    "homepage": "https://github.com/oleyur/twitter-api-php",
     "license": "GNU Public License",
     "authors": [
         {
